tests/test_files/valid_files_semantic/or.c
int main() {
    for (int a = 0; a <= 1; ++a) {
        for (int b = 0; b <= 1; ++b) {
            int r = a || b;
        }
    }
    return 0;
}
