tests/test_files/invalid_files_semantic/redeclaration.c
int main() {
    int a;
    int a;     // ❌ redeclaração de a
    return 0;
}
